6.sep (ws)
      - fix 12218: shared noteheads aren't shared
      - fix 12419: Ledger lines are still visible for invisible notes
      - fix 12428: Part name appears over the staves
      - fix 12430: edit style does not set score dirty bit
      - fix 12429: crash loading V1 scores
5.sep (ws)
      - fix #12137: Extending length of note into non-existing bar in part causes crash
      - fix #12202: Page settings (patch from lasconic)
      - fix #12395: Several issues with property pop menu (patch from Miwarre)
      - implemented spanners (haipins etc.) for linked parts
4.sep (lv)
      - fix #12276: MusicXML import: sub-optimal handling of different duration measures
      (ws)
      - voltas are now anchord to measures instead of segments
      - removed UndoGroup class
2.sep (ws)
      - if no explicit start repeat, go back to nearest section break if it exists instead
        to score beginning
      - show layer selector only if score has layers
1.sep (ws)
      - fixes for tempo, section break pause, fermata
31.aug (ws)
      - patch #12331: Option to not pan the score while playing (from Sure)
      - moved al library into libmscore
      - fix #12344: Crash on closing the last score
      - removed edit position from statusline; this functionality moved to the inspector panel
      - tempo fixes
22.aug (lv)
      - fix #11675: Crash opening MusicXML from Finale
17.aug (ws)
      - fix #12096: crash on startup if no navigator window (patch from Miwarre)
      - changed page settings to ensure that the printable area of a page
        is equal for odd and even pages
16.aug (ws)
      - new option: "show page margins"
      - optimized page layout
15.aug (la)
      - fix #12084: Crash when running transpose with title selected
12.aug (ws)
      - navigator preview is now calculated in background task
11.aug (ws)
      - fix #12049: Page count change causes crash
      - fix #12051: Score must be clicked or moved to see pages in navigator